--- a/sistema_checkin/core/templates/core/email_qrcode_geral.html
+++ b/sistema_checkin/core/templates/core/email_qrcode_geral.html
@@ -8,9 +8,9 @@
 
     <h1 style="color: #0056b3;">Olá, {{ nome_participante }}!</h1>
 
-    <p>Este é o seu QR Code de acesso <strong>permanente</strong> para os eventos organizados pelo IEEE/IFF.</p>
+    <p>Este é o seu QR Code de acesso <strong>permanente</strong> para a XII SECAE</p>
 
-    <p>Guarde este e-mail. Para agilizar seu acesso, basta apresentar o QR Code anexado (na tela do seu celular ou impresso) no momento do check-in de qualquer evento futuro.</p>
+    <p>Guarde este e-mail. Para agilizar seu acesso, basta apresentar o QR Code anexado (na tela do seu celular ou impresso) no momento do check-in de qualquer atividade.</p>
 
     <hr style="border: none; border-top: 1px solid #eee; margin: 20px 0;">
 
