--- a/sistema_checkin/core/templates/core/base.html
+++ b/sistema_checkin/core/templates/core/base.html
@@ -4,10 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- O block 'title' permite que cada página defina o seu próprio título -->
     <title>{% block title %}Sistema de Check-in{% endblock %}</title>
+    <link rel="icon" href="{% static 'core/favicon.ico' %}" type="image/x-icon">
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
+
 <body class="bg-gray-100 flex flex-col min-h-screen">
 
     <!-- Barra de Navegação -->
