--- a/sistema_checkin/core/templates/core/cadastro_geral.html
+++ b/sistema_checkin/core/templates/core/cadastro_geral.html
@@ -35,7 +35,7 @@
     <div class="bg-white p-8 rounded-lg shadow-md">
         <h1 class="text-2xl font-bold text-gray-800 mb-6 border-b pb-4">Cadastrar/Atualizar via CSV</h1>
         <p class="text-gray-600 mb-6">
-            Envie um ficheiro CSV com a lista de alunos no formato <strong>nome,matrícula,email</strong>.
+            Envie um ficheiro CSV com a lista de alunos no formato <strong>ID,nome,CPF,email</strong>.
         </p>
         <form method="post" enctype="multipart/form-data">
             {% csrf_token %}
